--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
     "description": "TEST API",
     "main": "server.js",
     "dependencies": {
-      "express": "*",
-      "orange-pi-gpio": "*"
+        "express": "*",
+        "orange-pi-gpio": "*",
+        "w1temp": "^4.4.1"
     },
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     },
     "keywords": [
-      "testAPI",
-      "API"
+        "testAPI",
+        "API"
     ],
     "author": "ben",
     "license": "ISC"
-  }
-  
+}
